--- a/estilo.css
+++ b/estilo.css
@@ -199,9 +199,28 @@ h1{
     }
 }
 
- #particles-js{
+#particles-js{
     height: 100vh;
     width: 100%;
     position: fixed;
-    z-index: -1;
+    z-index: -2;
 }
+
+
+/* #gear{
+    animation-name: rodar;
+    animation-duration: 2s;
+    animation-iteration-count:infinite;
+    animation-timing-function:linear;
+}
+
+@keyframes rodar {
+    from{
+        transform: rotateZ(0deg);
+    }
+    to{
+        transform: rotateZ(360deg);
+    }
+    
+} */
+
